--- a/config.json
+++ b/config.json
@@ -45,5 +45,5 @@
       "grid_granularity": [5, 5, 31]
   },
 
-  "data": { "data_path": "/scratch/datasets/cifar10" }
+  "data": { "data_path": "datasets/cifar10" }
 }
